--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ Carthage
 # `pod install` in .travis.yml
 #
 # Pods/
-Example/Pods
+Example/Pods/*
+!Example/Pods/Pods.xcodeproj/
+!Example/Pods/Pods.xcodeproj/xcuserdata
 Podfile.lock
 Example/CGLayout.xcworkspace
