--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@
 
 osx_image: xcode8.3
 language: objective-c
-# cache: cocoapods
+cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-- pod repo update
+# - pod repo update
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CGLayout.xcworkspace -scheme CGLayout-Example -sdk iphonesimulator10.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CGLayout.xcworkspace -scheme CGLayout-Example -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
