--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CGLayout.xcworkspace -scheme CGLayout-Example -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus' ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+# - pod lib lint
