--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,29 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode8.3
-language: objective-c
+os: 
+ - linux
+ - macos
+
+## macos
+osx_image: xcode9.3
+# language: objective-c
+
+## linux
+language: generic
+sudo: required
+dist: trusty
+
 # cache: cocoapods
-podfile: Example/Podfile
-before_install:
-- gem install cocoapods # Since Travis is not always on latest version
+# podfile: Example/Podfile
+# before_install:
+# - gem install cocoapods # Since Travis is not always on latest version
 # - pod repo update
-- pod install --project-directory=Example
+# - pod install --project-directory=Example
+
+install:
+  - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CGLayout.xcworkspace -scheme CGLayout-Example -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus' ONLY_ACTIVE_ARCH=NO | xcpretty
+  - swift test
+# - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/CGLayout.xcworkspace -scheme CGLayout-Example -sdk iphonesimulator11.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus' ONLY_ACTIVE_ARCH=NO | xcpretty
 # - pod lib lint
